--- a/index.html
+++ b/index.html
@@ -6,5 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Button Hover Effect</title>
   </head>
-  <body></body>
+  <body>
+    <a href="#">
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      Button
+    </a>
+  </body>
 </html>
